ikiwiki (2.32.3) UNRELEASED; urgency=low

  * Do not allow the about: URI scheme; some browsers interpret about:
    URIs like a limited version of data: URIs.  In particular, some
    versions of Internet Explorer interpret arbitrary HTML content in
    about: URIs.
  * Also filter the attributes cite, longdesc, and usemap, which can contain
    URIs.

 -- Josh Triplett <josh@freedesktop.org>  Sun, 10 Feb 2008 13:59:00 -0800

ikiwiki (2.31.2) unstable; urgency=high

  * The security fix in the last release had buggy handling of data:image,
    now fixed.

 -- Joey Hess <joeyh@debian.org>  Sun, 10 Feb 2008 15:31:17 -0500

ikiwiki (2.31.1) unstable; urgency=low

  * htmlscrubber security fix: Block javascript in uris.
  * Add htmlscrubber test suite.
  * Thanks to Josh Triplett for pointing out the holes and for his help
    in implementing and checking fixes.

 -- Joey Hess <joeyh@debian.org>  Sun, 10 Feb 2008 13:22:59 -0500

ikiwiki (2.31) unstable; urgency=low

  [ Joey Hess ]
  * Revert preservation of input file modification times in output files,
    since this leads to too many problems with web caching, especially with
    inlined pages. Properly solving this would involve tracking every page
    that contributes to a page's content and using the youngest of them all,
    as well as special cases for things like the version plugin, and it's just
    too complex to do.
  * aggregate: Forking a child broke the one state that mattered: Forcing
    the aggregating page to be rebuilt. Fix this.
  * cgi hooks are now run before ikiwiki state is loaded.
  * This allows locking the wiki before loading state, which avoids some
    tricky locking code when saving a web edit.
  * poll: This plugin turns out to have edited pages w/o doing any locking.
    Oops. Convert it from a cgi to a sessioncgi hook, which will work
    much better.
  * recentchanges: Improve handling of links on the very static changes pages